# Homework12.5

./: CMakeLists.txt  main.cpp  Создание структуры БД.txt
